# IA-2024-2025

Ficha6/: CMakeLists.txt
Ficha6/CodigoTrepaColinas/: algoritmo.c
Ficha7/: IIA_Ficha7_Resultados.xlsx
Ficha7/Ficha7_Codigo_Inicio/: CMakeLists.txt  knap_100.txt  knap_200.txt
IIA_Ficha7_Codigo_Final/: CMakeLists.txt  funcao.c  main.c
